@@ -30,18 +30,29 @@ repositories {
 }
 
 dependencies {
-    // Spring DATA
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-
+    // Spring boot Starter
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-devtools'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
-    implementation "com.querydsl:querydsl-jpa:$queryDslVersion:jakarta"
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.691'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    // Cloudflare R2 연동 위한 S3 SDK
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.691'
+    // AWS Lambda
+    implementation 'software.amazon.awssdk:lambda:2.20.0'
+
+    // Spring DATA
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.mongodb:mongodb-driver-sync'
+    implementation "com.querydsl:querydsl-jpa:$queryDslVersion:jakarta"
+    /* localDateTime 직렬화 역직렬화 필요 설정 */
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+
     runtimeOnly 'com.mysql:mysql-connector-j'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
@@ -54,9 +65,6 @@ dependencies {
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'io.lettuce:lettuce-core'
-
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // JWT 관련 의존성
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
@@ -73,6 +81,10 @@ bootRun {
 //    String activeProfile = System.getProperty("spring.profiles.active") ?: "local"
 //    println "=========ENV : $activeProfile"
 //    systemProperty "spring.profiles.active", activeProfile
+}
+
+tasks.named('bootRun') {
+    jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED']
 }
 
 // Querydsl 설정
